--- a/test/fixtures/hdfs-fixture/build.gradle
+++ b/test/fixtures/hdfs-fixture/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     exclude module: 'guava'
     exclude module: 'protobuf-java'
     exclude group: 'org.codehaus.jackson'
+    exclude group: "org.bouncycastle"
   }
 
   api "org.codehaus.jettison:jettison:${versions.jettison}"
@@ -47,7 +48,6 @@ dependencies {
   api "org.apache.logging.log4j:log4j-core:${versions.log4j}"
   api "io.netty:netty-all:${versions.netty}"
   api 'com.google.code.gson:gson:2.9.0'
-  api "org.bouncycastle:bcpkix-jdk15on:${versions.bouncycastle}"
   api "com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:${versions.jackson}"
   api "com.fasterxml.jackson.core:jackson-databind:${versions.jackson_databind}"
   api "com.fasterxml.woodstox:woodstox-core:${versions.woodstox}"
